--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "@headlessui/vue": "^1.7.15",
     "@heroicons/vue": "^2.0.18",
     "pinia": "^2.1.4",
