--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.4.0",
     "@headlessui/vue": "^1.7.15",
     "@heroicons/vue": "^2.0.18",
+    "axios": "^1.4.0",
+    "maska": "^2.1.10",
     "pinia": "^2.1.4",
     "tw-elements": "^1.0.0-beta3",
     "vue": "^3.3.4",
