--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.15",
     "@heroicons/vue": "^2.0.18",
+    "axios": "^1.4.0",
+    "firebase": "^10.3.1",
     "pinia": "^2.1.4",
     "tw-elements": "^1.0.0-beta3",
     "vue": "^3.3.4",
